# Nimbus

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  notes.md  salut-nimbus.txt  todo.txt
.agents/skills/Nimbus/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-or-update-crate-feature.md  add-or-update-server-feature.md  feature-development.md
.claude/homunculus/instincts/inherited/: Nimbus-instincts.yaml
.claude/skills/Nimbus/: SKILL.md
.codex/: AGENTS.md
.firecrawl/: cal.json  coolify.json  s1.json  s2.json  s3.json  s4.json  sc1.json  sc2.json  sc3.json  sc4.json  search1.json  search2.json  search3.json  search4.json
.github/workflows/: ci.yml  release.yml
crates/nimbus-ai/: Cargo.toml
crates/nimbus-ai/src/: lib.rs  providers.rs
crates/nimbus-core/: Cargo.toml
crates/nimbus-core/src/: lib.rs
crates/nimbus-crypto/: Cargo.toml
crates/nimbus-crypto/src/: lib.rs
crates/nimbus-github/: Cargo.toml
crates/nimbus-github/src/: git_data.rs  lib.rs  oauth.rs
crates/nimbus-search/: Cargo.toml
crates/nimbus-search/src/: lib.rs
crates/nimbus-server/: Cargo.toml
crates/nimbus-server/src/: activity.rs  assets.rs  cache.rs  config.rs  folders.rs  lib.rs  main.rs  routes.rs  shares.rs  tokens.rs  users.rs  vault.rs
crates/nimbus-storage/: Cargo.toml
crates/nimbus-storage/src/: lib.rs
docs/: DEPLOY.md  PREMIUM.md
docs/plans/: 2026-06-01-nimbus-phase1-foundation.md
docs/specs/: 2026-06-01-nimbus-advanced-roadmap.md  2026-06-01-nimbus-design.md
migrations/: 0001_init.sql  0002_vault.sql  0003_embeddings.sql  0004_github_token.sql  0005_trash.sql  0006_shares.sql  0007_users.sql  0008_folder_meta.sql
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  api.js  app.css
