[package]
name = "nimbus-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
