[package]
name = "nimbus-github"
version = "0.1.0"
edition = "2021"

[dependencies]
nimbus-core = { path = "../nimbus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
arc-swap = "1"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
