[package]
name = "nimbus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nimbus-core = { path = "../nimbus-core" }
nimbus-github = { path = "../nimbus-github" }
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "nimbus"
path = "src/main.rs"
