[package]
name = "nimbus-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
nimbus-core = { path = "../nimbus-core" }
nimbus-github = { path = "../nimbus-github" }
nimbus-crypto = { path = "../nimbus-crypto" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
